[Kiramu-3]: updated navigation bar

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -11,7 +11,9 @@
 // Layouts
 
 @import './layouts/header';
+@import './layouts/footer';
 
 // UI
 
 @import './ui/search';
+@import './ui/navigation';
