[Kiramu-4]: added react router and connected pages (Home, Categories, Filter, NotFound)

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -24,9 +24,9 @@ $lg-font-size: 3rem;
 
 // Color
 
-$background-color: #010101;
-$primary-color: #abc5cf;
-$primary-color-hover: #6c7a81;
+$background-color: #000000;
+$primary-color: #ffffff;
+$primary-color-hover: #abc5cf;
 $secondary-color: #e12b39;
 
 // Transition
