--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -1,1 +1,141 @@
-/*# sourceMappingURL=main.css.map */
+html {
+  font-size: 62.5%;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+  list-style-type: none;
+}
+
+body {
+  padding: 1.5rem 2rem;
+  background-color: #000000;
+  color: white;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  scroll-behavior: smooth;
+}
+
+@font-face {
+  font-family: "PoppinsRegular";
+  font-weight: 400;
+  font-style: normal;
+  src: local("Poppins Regular"), local("Poppins-Regular"), url(/public/fonts/Poppins/Poppins-Regular.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-Regular.woff) format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "PoppinsMedium";
+  font-weight: 500;
+  font-style: normal;
+  src: local("Poppins Medium"), local("Poppins-Medium"), url(/public/fonts/Poppins/Poppins-Medium.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-Medium.woff) format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "PoppinsSemiBold";
+  font-weight: 600;
+  font-style: normal;
+  src: local("Poppins SemiBold"), local("Poppins-SemiBold"), url(/public/fonts/Poppins/Poppins-SemiBold.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-SemiBold.woff) format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "PoppinsBold";
+  font-weight: 700;
+  font-style: normal;
+  src: local("Poppins Bold"), local("Poppins-Bold"), url(/public/fonts/Poppins/Poppins-Bold.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-Bold.woff) format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "MontserratRegular";
+  font-weight: 400;
+  font-style: normal;
+  src: local("Montserrat Regular"), local("Montserrat-Regular"), url(/public/fonts/Montserrat/Montserrat-Regular.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-Regular.woff) format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "MontserratMedium";
+  font-weight: 500;
+  font-style: normal;
+  src: local("Montserrat Medium"), local("Montserrat-Medium"), url(/public/fonts/Montserrat/Montserrat-Medium.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-Medium.woff) format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "MontserratSemiBold";
+  font-weight: 600;
+  font-style: normal;
+  src: local("Montserrat SemiBold"), local("Montserrat-SemiBold"), url(/public/fonts/Montserrat/Montserrat-SemiBold.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-SemiBold.woff) format("woff");
+  font-display: swap;
+}
+@font-face {
+  font-family: "MontserratBold";
+  font-weight: 700;
+  font-style: normal;
+  src: local("Montserrat Bold"), local("Montserrat-Bold"), url(/public/fonts/Montserrat/Montserrat-Bold.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-Bold.woff) format("woff");
+  font-display: swap;
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #000000;
+  color: #ffffff;
+}
+.header__logo {
+  font-family: "PoppinsBold", sans-serif;
+  font-size: 3rem;
+  line-height: 100%;
+  color: #ffffff;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+}
+.header__logo:hover {
+  color: #abc5cf;
+}
+
+.search {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100rem;
+  width: 100%;
+}
+.search__input {
+  max-width: 100rem;
+  width: 100%;
+  padding: 1rem;
+  border: none;
+  border-radius: 2rem;
+  background-color: #ffffff;
+  font-family: "MontserratMedium", sans-serif;
+  font-size: 1.6rem;
+  color: #000000;
+  outline: none;
+}
+.search__input::-webkit-input-placeholder {
+  color: #000000;
+}
+
+ion-icon {
+  position: absolute;
+  right: 1rem;
+  font-size: 2.5rem;
+  color: #000000;
+  cursor: pointer;
+}
+
+.navigation {
+  display: flex;
+  gap: 2.5rem;
+}
+.navigation__link {
+  font-family: "MontserratMedium", sans-serif;
+  font-size: 1.6rem;
+  color: #ffffff;
+  transition: all 0.3s ease-in-out;
+}
+.navigation__link:hover {
+  color: #abc5cf;
+}/*# sourceMappingURL=main.css.map */
