[Kiramu-5]: changed tag Link to NavLink with the focus of the navigation buttons on the active page

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -138,4 +138,9 @@ ion-icon {
 }
 .navigation__link:hover {
   color: #abc5cf;
+}
+.navigation__link--active {
+  font-family: "MontserratMedium", sans-serif;
+  font-size: 1.6rem;
+  color: #abc5cf;
 }/*# sourceMappingURL=main.css.map */
