--- a/src/components/ui/Search/_search.scss
+++ b/src/components/ui/Search/_search.scss
@@ -17,7 +17,7 @@
     border: none;
     border-radius: 2rem;
 
-    background-color: $primary-color;
+    background-color: $font-color-active;
 
     font-family: $primary-font-medium;
     font-size: $xs-font-size;
