--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -25,10 +25,10 @@ $lg-font-size: 3rem;
 // Color
 
 $background-color: #000000;
-$primary-color: #ffffff;
-$primary-color-hover: #abc5cf;
-$secondary-color: #e12b39;
+$font-color-active: #ffffff;
+$font-color-hover: #c0c0c0;
+$font-color-ignore: #929292;
 
 // Transition
 
-$primary-transition: all 0.3s ease-in-out;
+$primary-transition: all 0.2s ease-in-out;
