--- a/src/components/layout/Header/_header.scss
+++ b/src/components/layout/Header/_header.scss
@@ -1,7 +1,5 @@
 .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  @include d-flex-prm;
 
   background-color: $background-color;
 
