--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -23,62 +23,62 @@ body {
   font-family: "PoppinsRegular";
   font-weight: 400;
   font-style: normal;
-  src: local("Poppins Regular"), local("Poppins-Regular"), url(/public/fonts/Poppins/Poppins-Regular.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-Regular.woff) format("woff");
+  src: local("Poppins Regular"), local("Poppins-Regular"), url(/fonts/Poppins/Poppins-Regular.woff2) format("woff2"), url(/fonts/Poppins/Poppins-Regular.woff) format("woff");
   font-display: swap;
 }
 @font-face {
   font-family: "PoppinsMedium";
   font-weight: 500;
   font-style: normal;
-  src: local("Poppins Medium"), local("Poppins-Medium"), url(/public/fonts/Poppins/Poppins-Medium.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-Medium.woff) format("woff");
+  src: local("Poppins Medium"), local("Poppins-Medium"), url(/fonts/Poppins/Poppins-Medium.woff2) format("woff2"), url(/fonts/Poppins/Poppins-Medium.woff) format("woff");
   font-display: swap;
 }
 @font-face {
   font-family: "PoppinsSemiBold";
   font-weight: 600;
   font-style: normal;
-  src: local("Poppins SemiBold"), local("Poppins-SemiBold"), url(/public/fonts/Poppins/Poppins-SemiBold.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-SemiBold.woff) format("woff");
+  src: local("Poppins SemiBold"), local("Poppins-SemiBold"), url(/fonts/Poppins/Poppins-SemiBold.woff2) format("woff2"), url(/fonts/Poppins/Poppins-SemiBold.woff) format("woff");
   font-display: swap;
 }
 @font-face {
   font-family: "PoppinsBold";
   font-weight: 700;
   font-style: normal;
-  src: local("Poppins Bold"), local("Poppins-Bold"), url(/public/fonts/Poppins/Poppins-Bold.woff2) format("woff2"), url(/public/fonts/Poppins/Poppins-Bold.woff) format("woff");
+  src: local("Poppins Bold"), local("Poppins-Bold"), url(/fonts/Poppins/Poppins-Bold.woff2) format("woff2"), url(/fonts/Poppins/Poppins-Bold.woff) format("woff");
   font-display: swap;
 }
 @font-face {
   font-family: "MontserratRegular";
   font-weight: 400;
   font-style: normal;
-  src: local("Montserrat Regular"), local("Montserrat-Regular"), url(/public/fonts/Montserrat/Montserrat-Regular.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-Regular.woff) format("woff");
+  src: local("Montserrat Regular"), local("Montserrat-Regular"), url(fonts/Montserrat/Montserrat-Regular.woff2) format("woff2"), url(/fonts/Montserrat/Montserrat-Regular.woff) format("woff");
   font-display: swap;
 }
 @font-face {
   font-family: "MontserratMedium";
   font-weight: 500;
   font-style: normal;
-  src: local("Montserrat Medium"), local("Montserrat-Medium"), url(/public/fonts/Montserrat/Montserrat-Medium.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-Medium.woff) format("woff");
+  src: local("Montserrat Medium"), local("Montserrat-Medium"), url(/fonts/Montserrat/Montserrat-Medium.woff2) format("woff2"), url(/fonts/Montserrat/Montserrat-Medium.woff) format("woff");
   font-display: swap;
 }
 @font-face {
   font-family: "MontserratSemiBold";
   font-weight: 600;
   font-style: normal;
-  src: local("Montserrat SemiBold"), local("Montserrat-SemiBold"), url(/public/fonts/Montserrat/Montserrat-SemiBold.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-SemiBold.woff) format("woff");
+  src: local("Montserrat SemiBold"), local("Montserrat-SemiBold"), url(/fonts/Montserrat/Montserrat-SemiBold.woff2) format("woff2"), url(/fonts/Montserrat/Montserrat-SemiBold.woff) format("woff");
   font-display: swap;
 }
 @font-face {
   font-family: "MontserratBold";
   font-weight: 700;
   font-style: normal;
-  src: local("Montserrat Bold"), local("Montserrat-Bold"), url(/public/fonts/Montserrat/Montserrat-Bold.woff2) format("woff2"), url(/public/fonts/Montserrat/Montserrat-Bold.woff) format("woff");
+  src: local("Montserrat Bold"), local("Montserrat-Bold"), url(/fonts/Montserrat/Montserrat-Bold.woff2) format("woff2"), url(/fonts/Montserrat/Montserrat-Bold.woff) format("woff");
   font-display: swap;
 }
 .header {
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   background-color: #000000;
 }
 .header__logo {
@@ -93,53 +93,115 @@ body {
   color: #c0c0c0;
 }
 
+.footer__contacts > ion-icon {
+  font-size: 6rem;
+}
+
+.home {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
 .navigation {
   display: flex;
-  gap: 2.5rem;
-}
-.navigation__link {
-  font-family: "MontserratSemiBold", sans-serif;
-  font-size: 1.6rem;
-  color: #929292;
-  transition: all 0.2s ease-in-out;
-}
-.navigation__link:hover {
-  color: #c0c0c0;
-}
-.navigation__link--active {
-  font-family: "MontserratMedium", sans-serif;
-  font-size: 1.6rem;
-  color: #ffffff;
+  gap: 1rem;
 }
 
 .search {
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   max-width: 100rem;
   width: 100%;
 }
 .search__input {
   max-width: 100rem;
   width: 100%;
-  padding: 1rem;
+  height: 4.4rem;
+  padding: 1.2rem 2rem;
   border: none;
-  border-radius: 2rem;
-  background-color: #ffffff;
+  border-radius: 10rem;
+  background-color: #151515;
   font-family: "MontserratMedium", sans-serif;
   font-size: 1.6rem;
-  color: #000000;
+  color: #ffffff;
   outline: none;
 }
 .search__input::-webkit-input-placeholder {
+  color: #929292;
+}
+.search__button {
+  position: absolute;
+  right: 1.5rem;
+  border: none;
+  background-color: transparent;
+}
+.search__button > ion-icon {
+  font-size: 2.5rem;
+  color: #929292;
+  transition: all 0.2s ease-in-out;
+  cursor: pointer;
+}
+.search__button > ion-icon:hover {
+  color: #ffffff;
+}
+
+.button {
+  padding: 1.5rem 2rem;
+  border: none;
+  border-radius: 10rem;
+  background-color: #ffffff;
+  font-family: "MontserratSemiBold", sans-serif;
+  font-size: 1.6rem;
+  color: #000000;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+.button:hover {
+  background-color: #c0c0c0;
+}
+.button--secondary {
+  padding: 1rem 2rem;
+  background-color: #151515;
+  color: #929292;
+}
+.button--secondary:hover {
+  background-color: #292929;
+  color: #ffffff;
+}
+.button--secondary--active {
+  align-self: center;
+  padding: 1rem 2rem;
+  border-radius: 10rem;
+  background-color: #ffffff;
+  font-family: "MontserratSemiBold", sans-serif;
+  font-size: 1.6rem;
   color: #000000;
 }
 
-ion-icon {
-  position: absolute;
-  right: 1rem;
-  font-size: 2.5rem;
-  color: #000000;
-  cursor: pointer;
+.hero-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 20rem auto;
+}
+.hero-section__heading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 5rem;
+}
+.hero-section__title {
+  font-family: "MontserratBold", sans-serif;
+  font-size: 5rem;
+}
+.hero-section__description {
+  font-family: "MontserratMedium", sans-serif;
+  font-size: 2rem;
+  color: #c0c0c0;
 }/*# sourceMappingURL=main.css.map */
