--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -19,6 +19,10 @@ body {
   scroll-behavior: smooth;
 }
 
+::selection {
+  background-color: gray;
+}
+
 @font-face {
   font-family: "PoppinsRegular";
   font-weight: 400;
