[Kiramu-11]: added the not found (error) page

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -114,6 +114,17 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
+.not-found {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 5rem;
+  height: 85vh;
+  font-family: "MontserratBold", sans-serif;
+  font-size: 5rem;
+}
+
 .home {
   display: flex;
   justify-content: center;
