[Kiramu-12]: changed the target of the footer links

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -83,6 +83,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 1rem;
   background-color: #000000;
 }
 .header__logo {
