--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -24,11 +24,13 @@ $secondary-font-bold: "PoppinsBold", sans-serif;
 
 // Font-size
 
+$xxs-font-size: 1.4rem;
 $xs-font-size: 1.6rem;
 $sm-font-size: 1.8rem;
 $md-font-size: 2rem;
 $xm-font-size: 2.4rem;
 $lg-font-size: 3rem;
+$xl-font-size: 7rem;
 
 // Color
 
