[Kiramu-15]: added padding to the not found page

--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -214,6 +214,7 @@ body {
   align-items: center;
   flex-direction: column;
   gap: 5rem;
+  padding: 40rem 0;
   font-family: "MontserratBold", sans-serif;
   font-size: 5rem;
 }
