[Kiramu-16]: added: {API, Card, Random page, preloader}; removed: {Categories page, Filter page}

--- a/src/components/HeroSection/_hero-section.scss
+++ b/src/components/HeroSection/_hero-section.scss
@@ -19,6 +19,6 @@
   &__description {
     font-family: $primary-font-medium;
     font-size: $md-font-size;
-    color: $font-color-hover;
+    color: $color-ignore;
   }
 }
