--- a/src/pages/NotFound/_not-found.scss
+++ b/src/pages/NotFound/_not-found.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   gap: 5rem;
 
-  padding: 40rem 0;
+  height: 70vh;
 
   font-family: $primary-font-bold;
   font-size: 5rem;
