--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -12,7 +12,7 @@ html {
 
 body {
   padding: 1.5rem 2rem;
-  background-color: #000000;
+  background-color: #131313;
   color: white;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
@@ -21,6 +21,10 @@ body {
 
 ::selection {
   background-color: gray;
+}
+
+main {
+  margin: 5rem auto;
 }
 
 @font-face {
@@ -79,6 +83,22 @@ body {
   src: local("Montserrat Bold"), local("Montserrat-Bold"), url(/fonts/Montserrat/Montserrat-Bold.woff2) format("woff2"), url(/fonts/Montserrat/Montserrat-Bold.woff) format("woff");
   font-display: swap;
 }
+.heading {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  width: 100%;
+}
+.heading__title {
+  font-family: "MontserratBold", sans-serif;
+  font-size: 2.8rem;
+}
+.heading__description {
+  font-family: "MontserratMedium", sans-serif;
+  font-size: 1.8rem;
+  color: #929292;
+}
+
 .hero-section {
   display: flex;
   justify-content: center;
@@ -100,19 +120,32 @@ body {
 .hero-section__description {
   font-family: "MontserratMedium", sans-serif;
   font-size: 2rem;
-  color: #c0c0c0;
+  color: #929292;
 }
 
+.layout {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  background-color: #000000;
+  background-color: #131313;
 }
 .header__logo {
   font-family: "PoppinsBold", sans-serif;
-  font-size: 3rem;
+  font-size: 2.8rem;
   line-height: 100%;
   color: #ffffff;
   transition: all 0.2s ease-in-out;
@@ -132,37 +165,30 @@ body {
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
-  max-width: 30rem;
   width: 30rem;
 }
 .footer__title {
   font-family: "MontserratMedium", sans-serif;
-  font-size: 3rem;
+  font-size: 2.8rem;
   line-height: 100%;
   color: #ffffff;
-  transition: all 0.2s ease-in-out;
-  cursor: pointer;
-}
-.footer__title:hover {
-  color: #c0c0c0;
 }
 .footer__description {
   font-family: "MontserratMedium", sans-serif;
   font-size: 1.6rem;
-  color: #c0c0c0;
+  color: #929292;
 }
 .footer__project {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: left;
   flex-direction: column;
-  gap: 2rem;
-  max-width: 30rem;
+  gap: 4rem;
   width: 30rem;
 }
 .footer__logo {
   font-family: "PoppinsBold", sans-serif;
-  font-size: 7rem;
+  font-size: 3rem;
   line-height: 100%;
   color: #ffffff;
   transition: all 0.2s ease-in-out;
@@ -174,6 +200,7 @@ body {
 .footer__author {
   font-family: "MontserratMedium", sans-serif;
   font-size: 1.6rem;
+  color: #929292;
 }
 .footer__contacts {
   display: flex;
@@ -181,7 +208,6 @@ body {
   align-items: center;
   flex-direction: column;
   gap: 2rem;
-  max-width: 30rem;
   width: 30rem;
 }
 .footer__links {
@@ -214,9 +240,13 @@ body {
   align-items: center;
   flex-direction: column;
   gap: 5rem;
-  padding: 40rem 0;
+  height: 70vh;
   font-family: "MontserratBold", sans-serif;
   font-size: 5rem;
+}
+
+.anime {
+  max-width: 100rem;
 }
 
 .navigation {
@@ -239,7 +269,7 @@ body {
   padding: 1.2rem 2rem;
   border: none;
   border-radius: 10rem;
-  background-color: #151515;
+  background-color: #262626;
   font-family: "MontserratMedium", sans-serif;
   font-size: 1.6rem;
   color: #ffffff;
@@ -271,7 +301,7 @@ body {
   background-color: #ffffff;
   font-family: "MontserratSemiBold", sans-serif;
   font-size: 1.8rem;
-  color: #000000;
+  color: #131313;
   cursor: pointer;
   transition: all 0.2s ease-in-out;
 }
@@ -280,12 +310,12 @@ body {
 }
 .button--secondary {
   padding: 1rem 2rem;
-  background-color: #151515;
+  background-color: #262626;
   font-size: 1.6rem;
   color: #929292;
 }
 .button--secondary:hover {
-  background-color: #292929;
+  background-color: #393939;
   color: #ffffff;
 }
 .button--secondary--active {
@@ -295,5 +325,227 @@ body {
   background-color: #ffffff;
   font-family: "MontserratSemiBold", sans-serif;
   font-size: 1.6rem;
-  color: #000000;
+  color: #131313;
+}
+
+.card__container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 4rem;
+}
+
+.card {
+  position: relative;
+  max-width: 26rem;
+  width: 100%;
+  max-height: 37rem;
+  height: 100%;
+  border-radius: 2rem;
+  background-color: #262626;
+  transition: all 0.2s ease-in-out;
+}
+.card__image {
+  max-width: 26rem;
+  width: 100%;
+  max-height: 37rem;
+  height: 100%;
+  filter: saturate(150%);
+  border: 1px solid rgb(32, 32, 32);
+  border-radius: 2rem;
+  transition: all 0.2s ease-in-out;
+}
+.card__details {
+  position: absolute;
+  bottom: 0rem;
+  display: flex;
+  justify-content: space-between;
+  max-width: 26rem;
+  width: 100%;
+  max-height: 37rem;
+  height: 100%;
+  display: none;
+}
+.card__status {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4rem;
+  border-top-right-radius: 2rem;
+  border-top-left-radius: 2rem;
+  background-color: #6f42c1;
+  font-family: "MontserratRegular", sans-serif;
+  font-size: 1.6rem;
+  color: #ffffff;
+}
+.card__status--secondary {
+  background-color: rgb(255, 173, 49);
+}
+.card__status--undefined {
+  background-color: black;
+}
+.card__text {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 1.5rem;
+}
+.card__title {
+  font-family: "MontserratRegular", sans-serif;
+  font-size: 1.5rem;
+  color: #ffffff;
+  line-height: 1.2;
+  transition: all 0.2s ease-in-out;
+}
+.card__description {
+  display: flex;
+  gap: 1.5rem;
+  font-family: "MontserratSemiBold", sans-serif;
+  font-size: 1.4rem;
+  color: #c0c0c0;
+}
+.card__year {
+  color: rgb(255, 186, 68);
+}
+.card:hover {
+  transform: scale(1.05);
+}
+.card:hover .card__image {
+  border: 1px solid #ffffff;
+  filter: saturate(400%);
+  opacity: 0.1;
+}
+.card:hover .card__status {
+  border-color: rgb(59, 59, 59);
+}
+.card:hover .card__details {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.card__container {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 70vh;
+}
+
+.loader-inner {
+  height: 60px;
+  margin: auto;
+  width: 100px;
+}
+
+.loader-line-wrap {
+  animation: spin 2000ms cubic-bezier(0.175, 0.885, 0.32, 1.275) infinite;
+  box-sizing: border-box;
+  height: 50px;
+  overflow: hidden;
+  position: absolute;
+  transform-origin: 50% 100%;
+  width: 100px;
+}
+
+.loader-line {
+  border: 4px solid transparent;
+  border-radius: 100%;
+  box-sizing: border-box;
+  height: 100px;
+  left: 0;
+  margin: 0 auto;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 100px;
+}
+
+.loader-line-wrap:nth-child(1) {
+  animation-delay: -50ms;
+}
+
+.loader-line-wrap:nth-child(2) {
+  animation-delay: -100ms;
+}
+
+.loader-line-wrap:nth-child(3) {
+  animation-delay: -150ms;
+}
+
+.loader-line-wrap:nth-child(4) {
+  animation-delay: -200ms;
+}
+
+.loader-line-wrap:nth-child(5) {
+  animation-delay: -250ms;
+}
+
+.loader-line-wrap:nth-child(1) .loader-line {
+  border-color: hsl(0, 0%, 100%);
+  height: 90px;
+  width: 90px;
+  top: 7px;
+}
+
+.loader-line-wrap:nth-child(2) .loader-line {
+  border-color: hsl(0, 0%, 79%);
+  height: 76px;
+  width: 76px;
+  top: 14px;
+}
+
+.loader-line-wrap:nth-child(3) .loader-line {
+  border-color: hsl(0, 0%, 46%);
+  height: 62px;
+  width: 62px;
+  top: 21px;
+}
+
+.loader-line-wrap:nth-child(4) .loader-line {
+  border-color: hsl(0, 0%, 16%);
+  height: 48px;
+  width: 48px;
+  top: 28px;
+}
+
+.loader-line-wrap:nth-child(5) .loader-line {
+  border-color: hsl(0, 0%, 11%);
+  height: 34px;
+  width: 34px;
+  top: 35px;
+}
+
+@keyframes spin {
+  0%, 15% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.loader {
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }/*# sourceMappingURL=main.css.map */
