[Kiramu-17]: added slider

--- a/src/components/ui/Button/_button.scss
+++ b/src/components/ui/Button/_button.scss
@@ -37,7 +37,7 @@
 
       padding: $buttons-padding;
 
-      border-radius: 10rem;
+      border-radius: $border-radius;
 
       background-color: $color-active;
 
