--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -45,6 +45,9 @@ $color-active: #ffffff;
 $color-hover: #c0c0c0;
 $color-ignore: #929292;
 
+$status-completed-color: #ffad31;
+$status-ongoing-color: #6f42c1;
+
 // Transition
 
 $primary-transition: all 0.2s ease-in-out;
