--- a/src/components/HeroSection/_hero-section.scss
+++ b/src/components/HeroSection/_hero-section.scss
@@ -2,7 +2,34 @@
   @include d-flex-scn;
   flex-direction: column;
 
-  margin: 20rem auto;
+  width: 100%;
+
+  height: 70rem;
+  
+  margin-bottom: 7rem;
+
+  background: url('/images/nebo.jpg') no-repeat;
+  background-size: cover;
+  border-radius: 2.5rem;
+  border: 1px solid $bg-color-light;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+    padding: 10rem;
+
+    border-radius: 2.5rem;
+
+    background: rgba(18, 18, 18, 0.5);
+    backdrop-filter: blur(5px);
+
+    text-align: center
+  }
 
   &__heading {
     @include d-flex-scn;
@@ -12,13 +39,13 @@
   }
 
   &__title {
-    font-family: $primary-font-bold;  
+    font-family: $primary-font-bold;
     font-size: 5rem;
   }
 
   &__description {
     font-family: $primary-font-medium;
     font-size: $md-font-size;
-    color: $color-ignore;
+    color: $color-hover;
   }
 }
