--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -32,4 +32,5 @@
 @import '../components/ui/Button/button';
 @import '../components/ui/Card/card';
 @import '../components/ui/Preloader/preloader';
-@import '../components/ui/Swiper/swiper-slider'
+@import '../components/ui/Swiper/swiper-slider';
+@import '../components/ui/Iframe/iframe';
