--- a/src/pages/Anime/_anime.scss
+++ b/src/pages/Anime/_anime.scss
@@ -1,3 +1,88 @@
 .anime {
   max-width: 100rem;
+  width: 100%;
+
+  &__image {
+    max-width: 26rem;
+    width: 100%;
+
+    max-height: 37rem;
+    height: 100%;
+
+    border: 1px solid $bg-color-light;
+    border-radius: 2rem;
+  }
+
+  &__details {
+    display: flex;
+    gap: 4rem;
+  }
+
+  &__text {
+    font-family: $primary-font-semibold;
+    font-size: 1.7rem;
+  }
+
+  &__title {
+    margin-bottom: 2rem;
+
+    font-family: $primary-font-bold;
+    font-size: $xxm-font-size;
+    color: $color-active;
+    line-height: 1.2;
+  }
+
+  &__description {
+    margin-top: 2rem;
+
+    font-family: $primary-font-medium;
+    font-size: $xs-font-size;
+    color: $color-hover;
+
+    -webkit-line-clamp: 6;
+    display: -webkit-box; 
+    -webkit-box-orient: vertical; 
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 8px;
+      background-color: transparent;
+    }
+    
+    &::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      background-color: $bg-color-lighter;
+    }
+    
+    &::-webkit-scrollbar-track {
+      border-radius: 10px;
+      background-color: transparent;
+    }
+  }
+
+  &__series, &__genres {
+    color: $color-hover;
+  }
+
+  &__subtitle {
+    display: flex;
+    color: $color-active;
+  }
+
+  &__year-section, &__status-section, &__series, &__genres {
+    display: flex;
+    gap: 0.5rem;
+  }
+
+  &__year {
+    color: $status-completed-color;
+  }
+
+  &__status {
+    color: $status-completed-color;
+
+    &--secondary {
+      color: $status-ongoing-color;
+    }
+  }
 }
