--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,6 +24,7 @@
 @import '../pages/Home/home';
 @import '../pages/NotFound/not-found';
 @import '../pages/Anime/anime';
+@import '../pages/SearchPage/search-page';
 
 // UI
 
