--- a/src/components/ui/Card/_card.scss
+++ b/src/components/ui/Card/_card.scss
@@ -3,6 +3,9 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 4rem;
+
+  opacity: 0;
+  animation: fadeIn 1s ease-in-out forwards;
 }
 
 .card {
@@ -116,11 +119,12 @@
       gap: 1rem;
     }
   }
-}
 
-.card__container {
-  opacity: 0;
-  animation: fadeIn 1s ease-in-out forwards;
+  &__genres {
+    font-family: $primary-font-semibold;
+    font-size: $xxs-font-size;
+    color: $color-hover;
+  }
 }
 
 @keyframes fadeIn {
