--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -42,7 +42,7 @@ $bg-color: #131313;
 $bg-color-light: #262626;
 $bg-color-lighter: #393939;
 $color-active: #ffffff;
-$color-hover: #c0c0c0;
+$color-hover: #cbcbcb;
 $color-ignore: #929292;
 
 $status-completed-color: #ffad31;
